--- a/index.html
+++ b/index.html
@@ -1,26 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style type="text/css">
-      html, body { height: 100%; margin: 0; padding: 0; }
-      #map { height: 100%; }
-    </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="js/nessieAPI.js"></script>
+    <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
-    <div id="map"></div>
-    <script type="text/javascript">
-
-var map;
-function initMap() {
-  map = new google.maps.Map(document.getElementById('map'), {
-    center: {lat: -34.397, lng: 150.644},
-    zoom: 8
-  });
-}
-
-    </script>
+    <!--<div id="map"></div>
+    <script src="js/map.js" type="text/javascript"></script>
     <script async defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpYYeWmVMeYTAfAscvUMDKHb6eJxray34&callback=initMap">
     </script>
+    -->
   </body>
 </html>
