added map.center pin for debugging purposes and additional features

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   </head>
   <body>
     <!-- layout -->
-    <div id="floating-panel">
-      <input onclick="updateAtmLocation()" type=button value="Update ATM Location">
-      <input onclick="clearMarkers();" type=button value="Hide Markers">
-      <input onclick="showMarkers();" type=button value="Show All Markers">
-      <input onclick="deleteMarkers();" type=button value="Delete Markers">
-    </div>
     <div id="accounts"></div>
+      <!--<div id="floating-panel">
+        <input onclick="updateAtmLocation()" type=button value="Update ATM Location">
+        <input onclick="clearMarkers();" type=button value="Hide Markers">
+        <input onclick="showMarkers();" type=button value="Show All Markers">
+        <input onclick="deleteMarkers();" type=button value="Delete Markers">
+      </div>-->
     <div id="map"></div>
 
-    <!-- JS -->
+    <!-- js -->
     <script src="js/map.js" type="text/javascript"></script>
     <script async defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpYYeWmVMeYTAfAscvUMDKHb6eJxray34&callback=initMap">
