added endpoints for bills and purchase. sample is complete. will make more indepth sample later

--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
     <div id="sampleRequestsWrapper">
       <table>
         <tr>
-          <td>customers<br/><div id="customers"></div></td>
-          <td>accounts<br/><div id="accounts"></div></td>
-          <td>bills<br/><div id="bills"></div></td>
-          <td>purchase<br/><div id="purchase"></div></td>
+          <th>customers</th>
+          <th>accounts</th>
+          <th>bills</th>
+          <th>purchase</th>
+        </tr>
+        <tr>
+          <td><div id="customers"></div></td>
+          <td><div id="accounts"></div></td>
+          <td><div id="bills"></div></td>
+          <td><div id="purchases"></div></td>
         </tr>
       </table>
     </div>
@@ -28,7 +34,7 @@
     <script async defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpYYeWmVMeYTAfAscvUMDKHb6eJxray34&callback=initMap">
     </script>
-
+    
     <script src="js/jquery.min.js"></script>
     <script src="js/nessieAPI.js"></script>
 
